[package]
name = "profile-preprocessor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "profile-preprocessor"
path = "src/main.rs"

[[bin]]
name = "profile-to-graphviz"
path = "src/graphviz.rs"

[[bin]]
name = "trace"
path = "src/trace.rs"

[[bin]]
name = "filter"
path = "src/filter.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
itertools = "0.14.0"
