[package]
name = "samply-kit"
version = "0.1.0"
edition = "2021"

 [[bin]]
name = "tester"
path = "src/tester.rs"

[[bin]]
name = "preprocess"
path = "src/preprocess.rs"

[[bin]]
name = "pprof"
path = "src/pprof.rs"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
itertools = "0.14.0"
argh = "0.1.13"
regex = "1.12.2"
